<resources>
    <string name="app_name">Práctica 3</string>
    <!--activity_main-->
    <string name="main_title">Práctica 3</string>

    <!--fragment_auth-->
    <string name="auth_name">Nombre</string>
    <string name="auth_hint_user">Usuario</string>
    <string name="auth_pass">Clave</string>
    <string name="auth_hint_pass">Clave</string>
    <string name="auth_enviar">Enviar</string>

    <!--fragment_explanation-->
    <string name="main_description">Práctica realizada para la asignatura <i>Servicios Moviles</i> del grado de Ingenieria Telemática de la Universidad de Jaén</string>
    <string name="explanation">Esta es una explicación detallada de la práctica</string>
    <string name="main_menu_help_string">Acerca de ...</string>
    <string name="main_menu_configuration_string">Configuración</string>

    <!--fragment_configuration-->
    <string name="ip">Dirección IP del servidor</string>
    <string name="puerto">Puerto del servidor</string>


    <string name="measure">Valor de glucosa</string>
    <string name="timeslot">Tramo horario</string>
    <string name="before_breakfast">Ayuno</string>
    <string name="breakfast">Desayuno</string>
    <string name="lunch">Almuerzo</string>
    <string name="before_dinner">Merienda</string>
    <string name="dinner">Cena</string>
    <string name="enviar">Enviar</string>
    <string name="guardar">Guardar</string>

    <!--Array del Spinner-->
    <string-array name="franjas">
        <item>Ayuno</item>
        <item>Desayuno</item>
        <item>Almuerzo</item>
        <item>Merienda</item>
        <item>Cena</item>
    </string-array>
</resources>