<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_edit_pass"
        android:hint="@string/auth_hint_pass"
        android:inputType="textPassword"
        android:layout_alignBaseline="@+id/auth_label_pass"
        android:layout_alignBottom="@+id/auth_label_pass"
        android:layout_alignStart="@+id/auth_edit_user" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_edit_user"
        android:hint="@string/auth_hint_user"
        android:layout_marginLeft="35dp"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="42dp"
        android:layout_marginTop="31dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/auth_label_user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/auth_name"
        android:id="@+id/auth_label_user"
        tools:ignore="RtlHardcoded"
        android:layout_alignBaseline="@+id/auth_edit_user"
        android:layout_alignBottom="@+id/auth_edit_user"
        android:layout_alignEnd="@+id/auth_label_pass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/auth_pass"
        android:id="@+id/auth_label_pass"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/auth_edit_user"
        android:layout_toStartOf="@+id/auth_button_send" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_enviar"
        android:id="@+id/auth_button_send"
        android:onClick="onSend"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/auth_edit_pass"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo2"
        android:id="@+id/imageView"
        android:layout_marginBottom="23dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="23dp" />

</RelativeLayout>